syntax = "proto3";

message UiUpdate {
    oneof actual {
        UiGameState game_state = 1;
        UiCharts charts = 2;
    }
}

message UiCharts {
    repeated FloatWrapper average_fitnesses = 1;
    repeated FloatWrapper max_fitnesses = 2;
    repeated FloatWrapper average_sizes = 3;
    repeated FloatWrapper average_densities = 4;
    repeated FloatWrapper average_strengths = 5;
    repeated FloatWrapper average_quicknesses = 6;
}

message FloatWrapper {
    float value = 1;
}

message UiGameState {
    repeated UiBeetle beetles = 1;
}

message UiBeetle {
    int32 id = 1;
    float x = 2;
    float y = 3;
    float angle = 4;
    float size = 5;
    int32 health = 6;
    bool selected = 7;
}

message UiMessage {
    oneof actual {
        SelectBeetle select_beetle = 1;
        SelectedMoveCommand selected_move_command = 2;
        DeselectAllBeetles deselect_all_beetles = 3;
        SelectedInteractCommand selected_interact_command = 4;
        Terminate terminate = 5;
        CreateBeetle create_beetle = 6;
        RunSpeedSimulation run_speed_simulation = 7;
        RunBattleSimulation run_battle_simulation = 8;
        SelectAllInArea select_all_in_area = 9;
    }
}

message SelectBeetle {
    int32 beetle_id = 1;
}

message SelectAllInArea {
    float x1 = 1;
    float y1 = 2;
    float x2 = 3;
    float y2 = 4;
}

message DeselectAllBeetles {
}

message SelectedMoveCommand {
    float x = 1;
    float y = 2; 
}

message SelectedInteractCommand {
    int32 beetle_id = 1;
}

message Terminate {
}

message RunSpeedSimulation {
}

message RunBattleSimulation {
}

message CreateBeetle {
    float x = 1;
    float y = 2; 
}
